# knowledge_base

./: .gitignore  QUICKSTART.md  README.md  SYSTEM_ARCHITECTURE.md  pyproject.toml  pytest.ini
database/: schema.sql  schema_migration_001_multi_domain.sql
datasets/: biotech_pharma.txt  quantum_computing.txt  space_exploration.txt  tech_companies.txt  test_comprehensive.txt
docs/: AGENTS.md  API.md  ARCHITECTURE.md  CODEBASE_ARCHITECTURE.md  CODEBASE_CLEANUP_ASSESSMENT.md  DEPLOYMENT_GUIDE.md  PRODUCTION_READINESS_SUMMARY.md  implementation_plan.md
knowledge-base-ui/: README.md  index.html  tailwind.config.js  tsconfig.json  vite.config.ts
knowledge-base-ui/src/: App.tsx  index.tsx
scripts/: master_test.py  migrate_add_synonyms.py
src/knowledge_base/: api.py  circuit_breaker.py  community.py  config.py  domain.py  domain_detector.py  embedding_cache.py  embedding_service.py  exceptions.py  http_client.py  ingestor.py  log_emitter.py  main_api.py  metrics.py  pipeline.py  resolver.py  summarizer.py  tracing.py  visualize.py  websocket.py
streamlit-ui/: app.py  test_ingestion_content.txt
tests/: PLAYWRIGHT_END_TO_END_TEST_GUIDE.md  TESTING_FRAMEWORK.md  conftest.py  test_agent.py  test_api.py  test_clinical_trial.txt  test_community.py  test_comprehensive_playwright.txt  test_domain.py  test_history.json  test_ingestor.py  test_models.sh  test_pipeline.py  test_resolver.py  test_summarizer.py  test_websocket.py
tests/data/: doc_1_project_synapse.txt  doc_2_quantum_breakthrough.txt  doc_3_collaboration.txt  doc_4_regulatory_landscape.txt
(+52 files in other folders)
